deployment/nginx-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: traefik/whoami
        tty: true
        ports:
        - containerPort: 80
        volumeMounts:
        - name: jfs
          mountPath: /data
      volumes:
      - name: jfs
        persistentVolumeClaim:
          claimName: jfs
